package Entities;

public enum PaymentResult {
    SUCCESS,
    FAILURE
}
