package Entities.Seat;

public enum SeatStatus {
    AVAILABLE, HELD, BOOKED
}
